# rust-graphql-api-call

./: Cargo.toml
src/: main.rs
