[package]
name = "rust-hashnode-post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gql_client = "1.0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.33", features = ["full"] }
